--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
     transform: scaleY(1);
 } */
 
-.build-in-scale-top.build-in-animate {
+/* .build-in-scale-top.build-in-animate {
     transform: scaleY(1);
 }
 .build-in-scale-top {
     transition: transform .7s cubic-bezier(0.16, 1, 0.3, 1);
     transform: scaleY(0);
     transform-origin: 0 0;
-}
+} */
